# transfer-learning-forecast

./: .gitignore  Analysis_macro_saude.ipynb  README.md  Updade mem .ipynb  casos_CE.csv  casos_PB.csv  clustering.py  comp_models.py  compute_clusters.ipynb  download data_with_copernicus.ipynb  get_meso_data.ipynb  get_series_for_uf.ipynb  lstm.py  macro_saude.csv  pgbm_model.py  plots_lstm.py  plots_pgbm.py  pop_UF.csv  preprocessing.py  pyproject.toml  states.gpkg  test_custom_loss.py  typical_inc_curves_UF.csv  typical_inc_curves_macroregiao.csv  upload_data.py
clusters/: clusters_CE.pkl  clusters_PB.pkl  clusters_PE.pkl  clusters_PR.pkl  clusters_RJ.pkl
data/: casos_CE.csv  casos_PB.csv  casos_PE.csv  casos_PR.csv  casos_RJ.csv  chik_2303709_cluster.csv  chik_2304202_cluster.csv  chik_2304400_cluster.csv  chik_2304400_cluster_new.csv  chik_2307650_cluster.csv  chik_2507507_cluster.csv  chik_2507507_cluster_new.csv  chik_2611606_cluster.csv  chik_2611606_cluster_new.csv  chik_3303500_cluster.csv  chik_3304557_cluster.csv  chik_3304557_cluster_new.csv  chik_4108304_cluster.csv  dengue_2303709_cluster.csv  dengue_2304202_cluster.csv  dengue_2304400_cluster.csv  dengue_2304400_cluster_new.csv  dengue_2307650_cluster.csv  dengue_2507507_cluster.csv  dengue_2507507_cluster_new.csv  dengue_2611606_cluster.csv  dengue_2611606_cluster_new.csv  dengue_3303500_cluster.csv  dengue_3304557_cluster.csv  dengue_3304557_cluster_new.csv  dengue_4108304_cluster.csv
forecast/: Analysis_mem_state.ipynb  Dispersion Rt.ipynb  Update map viz_plot_by_macro.ipynb  apply_forecast.py  (+11 more)
(+278 files in other folders)
