[tool.poetry]
name = "transfer-learning-forecast"
version = "0.1.0"
description = "Code for transfer-learning paper"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "CC"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
plotly = "^5.18.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
epiweeks = "^2.2.0"
pgbm = "2.2.0"
geopandas = "^0.14.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
pyarrow = "^14.0.1"
psycopg2-binary = "^2.9.9"
pydot = "^1.4.2"
protobuf = "*"
tensorboard = "*"
properscoring = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
